Removed internal class usage.